--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -8,6 +8,8 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    /* background-color:#DEE6B2; */
+    width:100%;
 }
 .hero{
     margin-top: 100px;
@@ -21,6 +23,13 @@ h1 {
 }
 h2{
     font-size:50px;
+
+}
+
+.heroCont{
+    font-size:50px;
+    font-weight:bold;
+    
 }
 
 ul{ 
@@ -38,6 +47,11 @@ a{
 }
 .nav-hover:hover{
     color: #A44A3F;
+    
+}
+.nav-hover{
+    color:white;
+    
 }
 
 logo{
