--- a/src/App.css
+++ b/src/App.css
@@ -13,3 +13,10 @@ html, body {
     margin: 0;
     height: 100%; /* Ensures the body takes up the full height of the screen */
   }
+p{
+  margin: 0px;
+  font-size: 22px;}
+h3{
+    font-size: 30px;
+
+}
