--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -27,6 +27,7 @@ h2{
 }
 
 .heroCont{
+    margin-top: 50px;
     font-size:50px;
     font-weight:bold;
     
@@ -46,11 +47,12 @@ a{
     transition: color 0.3s ease;
 }
 .nav-hover:hover{
-    color: #A44A3F;
+    color:white;
+   
     
 }
 .nav-hover{
-    color:white;
+    color: #A44A3F;
     
 }
 
@@ -67,15 +69,29 @@ logo{
     /* transform: rotate(3deg); */
   
 }
-.cv{
+.cv {
     width: 200px;
     height: 55px;
     border-radius: 30px;
-    background-color: #F19C79;
+    background-color: #F19C79; 
     text-align: center;
     font-size: 30px;
     font-weight: 600;
     padding-top: 5px;
-    margin-top: 20px;
-   
+    margin-top: 70px;
+    transition: background-color 0.3s ease; 
+    border: none; 
+    cursor: pointer; 
+}
+.cv:hover {
+    background-color: #A44A3F; /* Change background color on hover */
+}
+
+.cvlink {
+    text-decoration: none;  
+    color: inherit; 
+}
+
+.button {
+    color: white; 
 }
