--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,6 +1,6 @@
 
 .Footer{
-    background-color:#DEE6B2;
+    background-color:#070024;
     display: flex;
     flex-direction: column;
     justify-content:center;
@@ -24,10 +24,14 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    color:white
 
+}
+.social-links a{
+    color:white
 }
 .copyright{
     display: flex;
     justify-content: center;
-    color: black;
+    color: white;
 }
